--- a/styles.css
+++ b/styles.css
@@ -218,7 +218,7 @@ footer div {
     color: #fea116;
   }
   .nav-bar img {
-    width: 30%;
+    width: 215px;
     margin: auto;
   }
   .mobile-nav-menu-icon {
