--- a/Contact/Contact.css
+++ b/Contact/Contact.css
@@ -33,7 +33,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-sizing: content-box;
 }
 .contact-us-section h1 {
   font-family: "Popping Extra Bold", sans-serif;
@@ -72,10 +71,10 @@
   align-items: center;
   width: 80%;
   gap: 10px 0;
+  
 }
 .contact-map {
   width: 100%;
-  height: 100%;
   margin: auto;
 }
 .contact-form {
@@ -85,7 +84,6 @@
   width: 100%;
   margin: auto;
 
-  max-height: 300px;
 }
 .contact-form input,
 .contact-form textarea {
@@ -121,6 +119,7 @@
   width: 100%;
   height: fit-content;
   padding: 12px 24px;
+  
 }
 .submit-btn:hover {
   cursor: pointer;
@@ -150,6 +149,8 @@
     align-items: initial;
     justify-content: center;
     gap: 5%;
+    margin-bottom: 5%
+    
   }
   .contact-form {
     display: grid;
@@ -159,7 +160,9 @@
     height: 100%;
     gap: 5% 10%;
     margin: initial;
+    max-height: 300px;
   }
+
   .contact-form input,
   .contact-form textarea {
     width: 100%;
@@ -171,6 +174,9 @@
   .intro {
     padding-top: 10%;
     padding-bottom: 10%;
+  }
+  .submit-btn{
+    margin-top:10px
   }
 }
 @media screen and (min-width: 768px) and (max-width: 900px) {
